--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,5 +1,46 @@
 .home-container{
   width: 100%;
   height: 100vh;
-  background-color: #39424e;
+  background-image: url(../../assets/white-setup.jpg);
+  background-position: center center;
+  background-size: cover;
+}
+
+.background{
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+}
+
+.text {
+  width: 30%;
+  height: auto;
+  position: relative;
+  color: #fff;
+  top: 35%;
+  left: 5%;
+  display: flex;
+  flex-direction: column;
+  /* text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7); */
+}
+
+.text h1 {
+  font-size: 60px;
+  font-weight: bolder;
+  margin-bottom: 1rem;
+  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+}
+
+.text a {
+  width: 50%;
+  height: 35px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+}
+.text a:hover {
+  cursor: pointer;
+}
+
+.text a i {
+  margin-left: 5%;
 }
