--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,14 +1,3 @@
-.sidebar-container {
-  height: 100vh;
-  background-color: #aea;
-  position: fixed;
-  padding: 0;
-}
-
-.sidebar-container p {
-  bottom: 0;
-}
-
 .picture {
   display: flex;
   justify-content: center;
@@ -17,7 +6,7 @@
 
 .picture img {
   width: 150px;
-  height: 150px;
+  height: 175px;
   border-radius: 50%;
 }
 
@@ -25,4 +14,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 5%;
+}
+
+.navigation ul {
+  padding: 0;
+  text-align: center;
+  line-height: 50px;
+}
+
+.navigation li {
+  list-style: none;
+}
+
+.icons {
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 25px;
+  margin-top: 10%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  padding: 5%;
+  text-align: center;
+}
+
+.footer p {
+  margin: 0;
+  font-size: 14px;
 }
