adding navigation between sections and finishing about section

--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,7 +1,8 @@
 .picture {
   display: flex;
   justify-content: center;
-  padding: 15%;
+  padding-bottom: 15%;
+  padding-top: 10%;
 }
 
 .picture img {
@@ -25,6 +26,12 @@
 
 .navigation li {
   list-style: none;
+}
+
+.navigation button {
+  border: none;
+  background: none;
+  line-height: initial;
 }
 
 .icons {
