--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,5 +1,61 @@
 .about-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100vh;
+  height: 60vh;
   background-color: #fff;
+  transition: all 1s ease-in;
+}
+
+.about-container .aboutcard {
+  width: 80%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  position: relative;
+  border-radius: 6px;
+  padding: 3%;
+  /* box-shadow: 10px 10px 10px #000; */
+  box-shadow: 0 15px 20px 5px rgba(0, 0, 0, 0.2);
+}
+
+.about-container .aboutcard .background {
+  background-image: url(../../assets/node-code.jpg);
+  background-position: 50%;
+  background-size: cover;
+  display: block;
+  filter: blur(3px);
+  height: 100%;
+  width: 100%;
+}
+
+.about-container .aboutcard header {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-container .aboutcard header img {
+  width: 100px;
+  border-radius: 15%;
+}
+
+.about-container .aboutcard header h1 {
+  font-size: 35px;
+  font-weight: 900;
+  color: #fff;
+  text-shadow: 5px 5px 5px #000;
+}
+
+.about-container .aboutcard header p {
+  font-size: 20px;
+  font-weight: 900;
+  color: #fff;
+  text-align: justify;
+  text-shadow: 5px 5px 5px #000;
 }
