--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -22,7 +22,8 @@
   left: 5%;
   display: flex;
   flex-direction: column;
-  /* text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.7); */
+  /* transform: translate(0, -25%); */
+  transition: all 4s .25s ease-out;
 }
 
 .text h1 {
