--- a/src/pages/layout/Layout.css
+++ b/src/pages/layout/Layout.css
@@ -1,7 +1,14 @@
+.main-container {
+  min-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 .sidebar {
   height: 100vh;
   box-shadow: inset 0 0 10px #000;
   background: #f2f3f7;
+  overflow: auto;
 }
 
 .pages {
