--- a/src/pages/layout/Layout.css
+++ b/src/pages/layout/Layout.css
@@ -1,16 +1,67 @@
-.main-container {
-  min-width: 1200px;
-  width: 100%;
+/* .main-container {
   margin: 0 auto;
+  max-width: 1200px;
+  height: auto;
 }
 
 .sidebar {
+  float: left;
+  width: 30%;
   height: 100vh;
-  box-shadow: inset 0 0 10px #000;
-  background: #f2f3f7;
-  overflow: auto;
+  background-color: khaki;
+  padding: 40px;
+  transform: translate(-300px);
 }
 
 .pages {
-  overflow: hidden;
+  height: 100vh;
+  float: left;
+  width: 70%;
+  background-color: lightcoral;
+  padding: 40px;
+} */
+
+.main-container {
+  width: 100%;
+  height: 100vh;
+  background: lightcoral;
+  display: flex;
+  position: absolute;
+}
+
+.hamburger {
+  width: 35px;
+  height: 35px;
+  position: fixed;
+  z-index: 2;
+  border: none;
+  top: 3%;
+  left: 5%;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: none;
+}
+
+.sidebar {
+  width: 300px;
+  height: 100vh;
+  background: #f2f3f7;
+  transform: translate(-300px);
+  position: absolute;
+  z-index: 1;
+  transition: .5s;
+}
+
+.open {
+  transform: none;
+  transition: .5s;
+}
+
+.pages {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background: lightslategray;
 }
