--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,12 +1,15 @@
-.home-container{
+.home-container {
   width: 100%;
   height: 100vh;
   background-image: url(../../assets/white-setup.jpg);
   background-position: center center;
   background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.background{
+.background {
   width: 100%;
   height: 100vh;
   background: rgba(0, 0, 0, 0.5);
@@ -14,30 +17,34 @@
 }
 
 .text {
-  width: 30%;
-  height: auto;
-  position: relative;
+  width: 60%;
+  position: absolute;
   color: #fff;
-  top: 35%;
-  left: 5%;
   display: flex;
   flex-direction: column;
   /* transform: translate(0, -25%); */
-  transition: all 4s .25s ease-out;
+  transition: all 4s 0.25s ease-out;
+  align-items: center;
 }
 
 .text h1 {
-  font-size: 60px;
+  text-align: center;
+  font-size: 50px;
   font-weight: bolder;
   margin-bottom: 1rem;
   text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
 }
 
 .text a {
-  width: 50%;
+  width: 100%;
   height: 35px;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+  box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.9);
+  text-align: center;
+  font-size: 20px;
+  color: #fff;
+  font-weight: bold;
 }
+
 .text a:hover {
   cursor: pointer;
 }
