--- a/src/pages/layout/Layout.css
+++ b/src/pages/layout/Layout.css
@@ -24,7 +24,6 @@
 .main-container {
   width: 100%;
   height: 100vh;
-  background: lightcoral;
   display: flex;
   position: absolute;
 }
@@ -42,6 +41,7 @@
   justify-content: center;
   align-items: center;
   background: none;
+  color: #fff;
 }
 
 .sidebar {
@@ -49,7 +49,7 @@
   height: 100vh;
   background: #f2f3f7;
   transform: translate(-300px);
-  position: absolute;
+  position: fixed;
   z-index: 1;
   transition: .5s;
 }
@@ -60,8 +60,5 @@
 }
 
 .pages {
-  position: relative;
   width: 100%;
-  height: 100vh;
-  background: lightslategray;
 }
