--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,11 +1,11 @@
 .about-container {
-  height: 100vh;
+  height: auto;
   padding: 3%;
   background-color: #f5f5f8;
 }
 
 .aboutcard {
-  border-radius: 10px 10px 0 0;
+  /* border-radius: 10px 10px 0 0; */
   background-color: #fff;
   box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.7);
   /* border-radius: 10px 10px 0 0; */
@@ -20,4 +20,31 @@
 .abouttext {
   text-align: left;
   padding: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  .about-container {
+    height: auto;
+    background: none;
+    padding-left: 5%;
+    padding-right: 5%;
+  }
+
+  .aboutcard {
+    display: flex;
+    align-items: center;
+    background: none;
+    box-shadow: none;
+  }
+
+  .headerimage {
+    border-radius: 10px;
+    width: 500px;
+  }
+
+  .abouttext {
+    padding: 0;
+    padding-left: 5%;
+    text-align: justify;
+  }
 }
