--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -1,5 +1,116 @@
 .experience-container {
+  height: auto;
+  background-color: #f5f5f8;
+}
+
+.experiencecard {
   width: 100%;
-  height: 100vh;
-  background-color: #eaeaea;
+  height: 100%;
+  position: relative;
+  /* background-color: #fff;
+  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.7); */
+}
+
+.experiencecard::before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 10px;
+  background: #fff;
+  top: 80px;
+  bottom: 200px;
+  margin-left: 35px;
+  /* border: 1px solid #adb5bd; */
+}
+
+.experiencecard h2 {
+  margin-left: 15px;
+  padding-top: 16px;
+  margin-right: 15px;
+}
+
+.timeline {
+  position: relative;
+  padding-top: 20px;
+  margin-left: 15px;
+  margin-bottom: 10px;
+}
+
+.content {
+  position: relative;
+}
+
+.icon {
+  width: 50px;
+  height: 50px;
+  float: left;
+  line-height: 40px;
+  text-align: center;
+  display: block;
+  box-shadow: 0 0px 0px 5px #fff;
+  border-radius: 50%;
+}
+
+.icon img {
+  width: 100%;
+  border-radius: 50%;
+}
+
+.timelinetext {
+  /* color: #000; */
+  position: relative;
+  background: #fff;
+  padding: 0.7em;
+  margin-left: 70px;
+  margin-right: 15px;
+  box-shadow: 3px 3px 7px 0 rgba(0, 0, 0, 0.7);
+}
+
+.timelinetext::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 15px 9px 15px 0;
+  border-color: transparent #fff transparent transparent;
+  left: 0;
+  top: 15px;
+  margin-left: -9px;
+}
+
+.timelinetext h2 {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.timelinetext h2 .title {
+  font-size: 20px;
+}
+
+.timelinetext h2 .subtitle {
+  font-size: 16px;
+  color: #6c757d;
+}
+
+@media screen and (min-width: 1024px) {
+  .experience-container {
+    background: #fff;
+  }
+
+  .experiencecard {
+    padding: 0 5% 5% 5%;
+  }
+
+  .experiencecard::before {
+    background: #eee;
+    bottom: 160px;
+  }
+
+  .icon {
+    box-shadow: 0 0px 0px 5px #eee;
+  }
 }
