--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -12,14 +12,14 @@
 .background {
   width: 100%;
   height: 100vh;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(255, 255, 255, 0.4);
   position: absolute;
 }
 
 .text {
   width: 60%;
   position: absolute;
-  color: #fff;
+  color: #000;
   display: flex;
   flex-direction: column;
   /* transform: translate(0, -25%); */
@@ -32,23 +32,40 @@
   font-size: 50px;
   font-weight: bolder;
   margin-bottom: 1rem;
-  text-shadow: 10px 10px 10px rgba(0, 0, 0, 0.9);
+  text-shadow: 5px 5px 10px rgb(0, 0, 0);
 }
 
 .text a {
   width: 100%;
   height: 35px;
-  box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.9);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.9);
   text-align: center;
   font-size: 20px;
-  color: #fff;
+  color: #000;
   font-weight: bold;
 }
 
 .text a:hover {
   cursor: pointer;
+  /* background: #fff; */
+  border: 2px solid #000;
+  color: #000;
 }
 
 .text a i {
   margin-left: 5%;
+}
+
+@media screen and (min-width: 1024px) {
+  /* .home-container {
+    all: initial;
+  } */
+
+  .background {
+    position: initial;
+  }
+
+  .text {
+    width: 20%;
+  }
 }
