--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -78,3 +78,17 @@
     font-size: 35px;
   }
 }
+
+/* @media screen and (min-width: 1024px) {
+  .sidebar-container {
+    all: initial;
+  }
+
+  .picture {
+    all: initial;
+  }
+
+  .icons {
+    all: initial;
+  }
+} */
