--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,5 +1,95 @@
 .skills-container {
   width: 100%;
-  height: 100vh;
-  background-color: #fff;
+  height: auto;
+  background-color: #f5f5f8;
+  padding: 5%;
+}
+
+.skills-container h1 {
+  margin-bottom: 32px;
+  text-align: center;
+}
+
+.iconscontainer i {
+  font-size: 30px;
+  margin-bottom: .2em;
+}
+
+.iconscontainer h5 {
+  color: #000;
+}
+
+.iconscontainer span:first-child {
+  color: #f16529;
+}
+
+.iconscontainer span:nth-child(2) {
+  color: #0170ba;
+}
+
+.iconscontainer span:nth-child(3) {
+  color: #f7df1e;
+}
+
+.iconscontainer span:nth-child(4) {
+  color: #b52e31;
+}
+
+.iconscontainer span:nth-child(5) {
+  color: #61dafb;
+}
+
+.iconscontainer span:nth-child(6) {
+  color: #f34f29;
+}
+
+.iconscontainer span:nth-child(7) {
+  color: #539e43;
+}
+
+.iconscontainer span:nth-child(8) {
+  color: #4e9547;
+}
+
+.iconscontainer span:nth-child(9) {
+  color: #563d7c;
+}
+
+.iconscontainer span:nth-child(10) {
+  color: #cd6799;
+}
+
+.iconscontainer span:nth-child(11) {
+  color: #8a4182;
+}
+
+.iconscontainer {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.iconscontainer span {
+  margin-bottom: 5%;
+  width: 33%;
+}
+
+@media screen and (min-width: 768px) {
+  .skills-container h1 {
+    text-align: center;
+  }
+
+  .iconscontainer i {
+    font-size: 50px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .skills-container {
+    background: #fff;
+  }
+
+  h1 {
+    text-align: center;
+  }
 }
