--- a/src/components/experience/Experience.css
+++ b/src/components/experience/Experience.css
@@ -1,26 +1,32 @@
 .experience-container {
   height: auto;
-  background-color: #f5f5f8;
+  background-color: #fff;
+  padding: 5%;
+  padding-top: 0;
+}
+
+.titleexperience {
+  font-size: 24px;
 }
 
 .experiencecard {
   width: 100%;
   height: 100%;
   position: relative;
-  /* background-color: #fff;
-  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.7); */
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  padding: 2% 2% 2% 2%;
 }
 
 .experiencecard::before {
   content: "";
   position: absolute;
   display: block;
-  width: 10px;
-  background: #fff;
+  width: 5px;
+  background: #eaeaea;
   top: 80px;
-  bottom: 200px;
+  bottom: 300px;
   margin-left: 35px;
-  /* border: 1px solid #adb5bd; */
 }
 
 .experiencecard h2 {
@@ -31,7 +37,7 @@
 
 .timeline {
   position: relative;
-  padding-top: 20px;
+  margin-top: 10px;
   margin-left: 15px;
   margin-bottom: 10px;
 }
@@ -47,7 +53,7 @@
   line-height: 40px;
   text-align: center;
   display: block;
-  box-shadow: 0 0px 0px 5px #fff;
+  box-shadow: 0 0px 0px 5px #eaeaea;
   border-radius: 50%;
 }
 
@@ -57,13 +63,14 @@
 }
 
 .timelinetext {
-  /* color: #000; */
   position: relative;
   background: #fff;
   padding: 0.7em;
   margin-left: 70px;
   margin-right: 15px;
-  box-shadow: 3px 3px 7px 0 rgba(0, 0, 0, 0.7);
+  border: 2px solid #eaeaea;
+  border-radius: 10px;
+  /* box-shadow: 3px 3px 7px 0 rgba(0, 0, 0, 0.7); */
 }
 
 .timelinetext::after {
@@ -74,35 +81,45 @@
   height: 0;
   border-style: solid;
   border-width: 15px 9px 15px 0;
-  border-color: transparent #fff transparent transparent;
+  border-color: transparent #eaeaea transparent transparent;
   left: 0;
   top: 15px;
   margin-left: -9px;
 }
 
-.timelinetext h2 {
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
+.timelinetext div {
+  font-size: 14px;
 }
 
-.timelinetext h2 .title {
+.timelinetext .timelinetitle {
   font-size: 20px;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-.timelinetext h2 .subtitle {
+.timelinetext .timelinesubtitle {
   font-size: 16px;
   color: #6c757d;
 }
 
+@media screen and (min-width: 768px) {
+  .experiencecard::before {
+    bottom: 200px;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .experience-container {
-    background: #fff;
+    margin-bottom: 3%;
+    padding: 0;
+  }
+
+  .titleexperience {
+    font-size: 40px;
   }
 
   .experiencecard {
-    padding: 0 5% 5% 5%;
+    padding: 2% 2% 2% 2%;
   }
 
   .experiencecard::before {
@@ -112,5 +129,17 @@
 
   .icon {
     box-shadow: 0 0px 0px 5px #eee;
+  }
+
+  .timelinetext div {
+    font-size: 16px;
+  }
+
+  .timelinetitle {
+    font-size: 24px;
+  }
+
+  .timelinesubtitle {
+    font-size: 18;
   }
 }
