--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -57,9 +57,9 @@
 }
 
 @media screen and (min-width: 1024px) {
-  /* .home-container {
-    all: initial;
-  } */
+  .home-container {
+    margin-bottom: 3%;
+  }
 
   .background {
     position: initial;
