--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -1,13 +1,20 @@
 .skills-container {
   width: 100%;
   height: auto;
-  background-color: #f5f5f8;
+  background-color: #fff;
   padding: 5%;
+  padding-top: 0;
 }
 
-.skills-container h1 {
-  margin-bottom: 32px;
-  text-align: center;
+.title {
+  font-size: 24px;
+}
+
+.iconscontainer {
+  border: 1px solid #dcdcdc;
+  border-radius: 10px;
+  padding-top: 5%;
+  padding-top: 5%;
 }
 
 .iconscontainer i {
@@ -75,10 +82,15 @@
 }
 
 @media screen and (min-width: 768px) {
-  .skills-container h1 {
-    text-align: center;
+  .title {
+    margin-bottom: 16px;
+    font-size: 32px;
   }
-
+  
+  .iconscontainer span {
+    width: 25%;
+  }
+  
   .iconscontainer i {
     font-size: 50px;
   }
@@ -87,9 +99,16 @@
 @media screen and (min-width: 1024px) {
   .skills-container {
     background: #fff;
+    padding: 0;
+    margin-bottom: 3%;
   }
-
-  h1 {
-    text-align: center;
+  
+  .title {
+    margin-bottom: 16px;
+    font-size: 40px;
+  }
+  
+  .iconscontainer span {
+    width: 16%;
   }
 }
